[package]
name = "Axum_Kelly_Plotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.16"
dotenv = "0.15.0"
plotlib = "0.5.1"
serde = "1.0.160"
statrs = "0.16.0"
tokio = "1.27.0"
tower-http = "0.4.0"
web-sys = "0.3.61"
yahoo-finance = "0.3.0"
yew = "0.20.0"
